gateway/gateway-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: k8s-playground-route
spec:
  parentRefs:
    - name: k8s-playground-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /dev-app
      backendRefs:
        - name: dev-app-service
          namespace: hello-app
          port: 5678
    - matches:
        - path:
            type: PathPrefix
            value: /ops-app
      backendRefs:
        - name: ops-app-service
          namespace: hello-app
          port: 5678
    - matches:
        - path:
            type: PathPrefix
            value: /ops-app-v2
      backendRefs:
        - name: ops-app-service
          namespace: hello-app
          port: 5678
